--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/node": "^18.7.16",
     "class-validators": "^1.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.0",
     "nodemon": "^2.0.19",
@@ -25,6 +27,7 @@
     "typescript": "^4.8.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12"
+    "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.9"
   }
 }
